// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInteractions when button is not clicked render correctly 1`] = `
<div>
  <h2
    class="chakra-heading css-jmbq56"
  >
    User Interactions
  </h2>
  <div
    class="chakra-stack css-1sam6cv"
  >
    <p
      class="chakra-text css-0"
    >
      User interactions are often part of the public interface of our UI our component. In order to test them we need to simulate user interactions, such a clicking a button or typing into an input field.
    </p>
    <h3
      class="chakra-heading css-0"
    >
      Some Typing
    </h3>
    <input
      class="chakra-input css-0"
      data-testid="an-input"
      placeholder="Type something or else"
    />
    <p
      class="chakra-text css-vmpf5w"
      data-testid="user-output"
    >
      <strong>
        You are typing:
      </strong>
       
    </p>
    <h3
      class="chakra-heading css-0"
    >
      A Click
    </h3>
    <button
      class="chakra-button css-1cthc8r"
      type="button"
    >
      Show
    </button>
  </div>
</div>
`;

exports[`UserInteractions when text is inputted render correctly 1`] = `
<div>
  <h2
    class="chakra-heading css-jmbq56"
  >
    User Interactions
  </h2>
  <div
    class="chakra-stack css-1sam6cv"
  >
    <p
      class="chakra-text css-0"
    >
      User interactions are often part of the public interface of our UI our component. In order to test them we need to simulate user interactions, such a clicking a button or typing into an input field.
    </p>
    <h3
      class="chakra-heading css-0"
    >
      Some Typing
    </h3>
    <input
      class="chakra-input css-0"
      data-testid="an-input"
      placeholder="Type something or else"
    />
    <p
      class="chakra-text css-vmpf5w"
      data-testid="user-output"
    >
      <strong>
        You are typing:
      </strong>
       
      foo bar baz
    </p>
    <h3
      class="chakra-heading css-0"
    >
      A Click
    </h3>
    <button
      class="chakra-button css-1cthc8r"
      type="button"
    >
      Show
    </button>
  </div>
</div>
`;

exports[`UserInteractions when the button is clicked render correctly 1`] = `
<div>
  <h2
    class="chakra-heading css-jmbq56"
  >
    User Interactions
  </h2>
  <div
    class="chakra-stack css-1sam6cv"
  >
    <p
      class="chakra-text css-0"
    >
      User interactions are often part of the public interface of our UI our component. In order to test them we need to simulate user interactions, such a clicking a button or typing into an input field.
    </p>
    <h3
      class="chakra-heading css-0"
    >
      Some Typing
    </h3>
    <input
      class="chakra-input css-0"
      data-testid="an-input"
      placeholder="Type something or else"
    />
    <p
      class="chakra-text css-vmpf5w"
      data-testid="user-output"
    >
      <strong>
        You are typing:
      </strong>
       
    </p>
    <h3
      class="chakra-heading css-0"
    >
      A Click
    </h3>
    <button
      class="chakra-button css-1cthc8r"
      type="button"
    >
      Hide
    </button>
    <h3
      class="chakra-heading css-0"
    >
      👻 BOO! 👻
    </h3>
  </div>
</div>
`;
